--- a/site/src/App.css
+++ b/site/src/App.css
@@ -1,6 +1,19 @@
 .App {
   text-align: center;
 }
+
+@font-face {
+  font-family: "Flemish Script";
+  src: local("OPTIFlemish-Script"),
+    url(./fonts/OPTIFlemish-Script.otf) format("otf");
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Flemish Script";
+}
+
 /* ------ 
    HEADER
    ------ 
@@ -31,9 +44,21 @@
 
 .cover-photo {
   width: 100%;
+  position: relative;
 }
 .cover-photo img {
   width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.cover-photo h1 {
+  position: absolute;
+  bottom: 11%;
+  right: 6%;
+  color: white;
+  font-size: 6rem;
+  font-weight: lighter;
 }
 
 /* RESPONSIVE */
