bugfix: Flemish Script wasn't loading in chrome; removed format() from @font-face

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -4,8 +4,7 @@
 
 @font-face {
   font-family: "Flemish Script";
-  src: local("OPTIFlemish-Script"),
-    url(./fonts/OPTIFlemish-Script.otf) format("otf");
+  src: local("OPTIFlemish-Script"), url(./fonts/OPTIFlemish-Script.otf);
 }
 
 h1,
