--- a/site/src/App.css
+++ b/site/src/App.css
@@ -53,11 +53,12 @@ h3 {
 
 .cover-photo h1 {
   position: absolute;
-  bottom: 11%;
+  bottom: 0%;
   right: 6%;
   color: white;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: lighter;
+  line-height: 4rem;
 }
 
 /* RESPONSIVE */
