--- a/site/src/App.css
+++ b/site/src/App.css
@@ -25,6 +25,13 @@ h2
 
 h2 {
   font-size: 3rem;
+  margin: 2%;
+}
+
+h3 {
+  font-weight: normal;
+  font-style: italic;
+  margin: 0;
 }
 
 /* ------ 
@@ -45,8 +52,18 @@ h2 {
   font-size: 4rem;
 }
 
+h1 {
+  margin-bottom: 0;
+}
+
+.names h1 a {
+  font-size: 5.5rem;
+}
+
 .date h2 {
   margin: 0 0 2% 0;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 2.4rem;
 }
 
 .navbar a {
@@ -87,6 +104,7 @@ h2 {
 .subpage {
   width: 900px;
   margin: 10% auto;
+  margin-top: 2%;
   font-size: 1.8rem;
 }
 
