--- a/site/src/App.css
+++ b/site/src/App.css
@@ -129,6 +129,23 @@ p {
   .header {
     width: 100%;
   }
+  .hamburger-icon {
+    /* width: 30px; */
+    /* height: 30px; */
+    width: 50px;
+    height: 50px;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2%;
+  }
+  .hamburger-icon i {
+    /* width: 100%; */
+    margin: 2.5%;
+    font-size: 1.3rem;
+  }
   .navbar a {
     width: 100%;
     padding: 15px 0;
@@ -136,7 +153,13 @@ p {
   .subpage {
     width: 100%; 
   }
-  .ceremony p {
+  .visible {
+    display: block;
+  }
+  .invisible {
+    display: none;
+  }
+  p {
     margin: 0 5%;
     line-height: 3rem;
   }
