--- a/site/src/App.css
+++ b/site/src/App.css
@@ -66,6 +66,14 @@ h1 {
   font-size: 2.4rem;
 }
 
+li {
+  font-family: "Cormorant Garamond", serif;
+}
+
+.hamburger-icon {
+  display: none;
+}
+
 .navbar a {
   width: 15%;
   font-family: 'Cormorant Garamond', serif;
@@ -116,6 +124,36 @@ p {
   display: block;
 }
 
+hr {
+  width: 85%;
+  margin-top: 2%;
+}
+
+.wedding-party {
+  display: flex;
+  flex-direction: column;
+}
+
+.wedding-party-groups {
+  margin-top: 2.5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.wedding-party-group {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: left; */
+}
+
+.wedding-party-group ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
 /* RESPONSIVE */
 
 @media screen and (max-width: 450px) {
@@ -140,6 +178,11 @@ p {
     justify-content: center;
     align-items: center;
     margin-left: 2%;
+    background: white;
+    color: navy;
+  }
+  button {
+    text-shadow: none;
   }
   .hamburger-icon i {
     /* width: 100%; */
